--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-uedtask",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "build/index.js",
   "scripts": {
@@ -38,5 +38,9 @@
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-preset-es2015": "^6.18.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/meltifa/gulp-uedtask.git"
   }
 }
