--- a/package.json
+++ b/package.json
@@ -1,47 +1,46 @@
 {
   "name": "gulp-uedtask",
-  "version": "1.0.9",
+  "version": "2.0.0",
   "description": "",
   "main": "build/index.js",
   "scripts": {
     "build": "babel -d ./build ./src",
-    "lint": "eslint src/**/*.es6"
+    "lint": "eslint src/**/*.js"
   },
   "keywords": [
     "gulp"
   ],
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^6.5.3",
-    "browser-sync": "^2.18.2",
-    "del": "^2.2.2",
-    "fonteditor-core": "0.0.33",
-    "gulp-cache": "^0.4.5",
-    "gulp-html-tpl": "^0.4.1",
-    "gulp-iconfont": "^8.0.1",
-    "gulp-if": "^2.0.2",
+    "autoprefixer": "6.7.6",
+    "browser-sync": "2.18.8",
+    "del": "2.2.2",
+    "fonteditor-core": "0.0.36",
+    "glob": "7.1.1",
+    "gulp-html-tpl": "0.4.1",
+    "gulp-iconfont": "8.0.1",
+    "gulp-if": "2.0.2",
     "gulp-imagemin": "2.4.0",
-    "gulp-postcss": "^6.2.0",
-    "gulp-posthtml": "^2.0.0",
-    "gulp-retina-resizer": "^1.0.0",
-    "gulp-sass": "^3.0.0",
-    "gulp-template": "^4.0.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.8",
-    "gulp.spritesmith": "^6.2.1",
+    "gulp-postcss": "6.3.0",
+    "gulp-posthtml": "2.0.0",
+    "gulp-retina-resizer": "1.0.0",
+    "gulp-sass": "3.1.0",
+    "gulp-uglify": "2.0.1",
+    "gulp-util": "3.0.8",
+    "gulp.spritesmith": "6.3.0",
     "imagemin-mozjpeg": "5.1.0",
     "imagemin-pngquant": "4.2.2",
-    "juicer": "^0.6.14",
-    "postcss": "^5.2.12",
-    "postcss-px-editor": "^0.1.0",
-    "postcss-pxtorem": "^3.3.1",
-    "postcss-url-editor": "^0.3.1",
-    "posthtml-parser": "^0.2.0",
-    "run-sequence": "^1.2.2"
+    "juicer": "0.6.14",
+    "postcss": "5.2.15",
+    "postcss-px-editor": "0.1.0",
+    "postcss-pxtorem": "3.3.1",
+    "postcss-url-editor": "0.3.3",
+    "posthtml-parser": "0.2.1",
+    "run-sequence": "1.2.2"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-preset-es2015": "^6.18.0"
+    "babel-core": "6.23.1",
+    "babel-preset-es2015": "6.22.0"
   },
   "repository": {
     "type": "git",
