--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-uedtask",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "",
   "main": "build/index.js",
   "scripts": {
@@ -40,7 +40,8 @@
   },
   "devDependencies": {
     "babel-core": "6.23.1",
-    "babel-preset-es2015": "6.22.0"
+    "babel-preset-es2015": "6.22.0",
+    "babel-preset-stage-0": "6.22.0"
   },
   "repository": {
     "type": "git",
