--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-uedtask",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "",
   "main": "build/index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "del": "2.2.2",
     "fonteditor-core": "0.0.36",
     "glob": "7.1.1",
+    "gulp-file-include": "1.1.0",
     "gulp-html-tpl": "0.4.1",
     "gulp-iconfont": "8.0.1",
     "gulp-if": "2.0.2",
