--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-uedtask",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "",
   "main": "build/index.js",
   "scripts": {
@@ -21,7 +21,8 @@
     "gulp-html-tpl": "0.4.1",
     "gulp-iconfont": "8.0.1",
     "gulp-if": "2.0.2",
-    "gulp-imagemin": "2.4.0",
+	"gulp-imagemin": "2.4.0",
+	"gulp-newer": "1.3.0",
     "gulp-postcss": "6.3.0",
     "gulp-posthtml": "2.0.0",
     "gulp-retina-resizer": "1.0.0",
