--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-uedtask",
-  "version": "2.1.5",
+  "version": "2.1.6",
   "description": "",
   "main": "build/index.js",
   "scripts": {
@@ -21,8 +21,8 @@
     "gulp-html-tpl": "0.4.1",
     "gulp-iconfont": "8.0.1",
     "gulp-if": "2.0.2",
-	"gulp-imagemin": "2.4.0",
-	"gulp-newer": "1.3.0",
+    "gulp-imagemin": "2.4.0",
+    "gulp-newer": "1.3.0",
     "gulp-postcss": "6.3.0",
     "gulp-posthtml": "2.0.0",
     "gulp-retina-resizer": "1.0.0",
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "babel-core": "6.23.1",
+    "babel-eslint": "7.2.3",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-stage-0": "6.22.0"
   },
