--- a/package.json
+++ b/package.json
@@ -1,51 +1,56 @@
 {
   "name": "gulp-uedtask",
-  "version": "2.1.6",
+  "version": "3.0.0",
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "build": "babel -d ./build ./src",
+    "build": "babel -d build src",
     "lint": "eslint src/**/*.js"
+  },
+  "engines": {
+    "node": ">=8.0.0",
+    "npm": ">=5.0"
   },
   "keywords": [
     "gulp"
   ],
   "license": "MIT",
+  "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "eslint": "4.5.0",
+    "eslint-config-airbnb-base": "11.3.2"
+  },
   "dependencies": {
-    "autoprefixer": "6.7.6",
-    "browser-sync": "2.18.8",
-    "del": "2.2.2",
-    "fonteditor-core": "0.0.36",
-    "glob": "7.1.1",
-    "gulp-file-include": "1.1.0",
+    "autoprefixer": "7.1.3",
+    "babel-runtime": "6.26.0",
+    "browser-sync": "2.18.13",
+    "del": "3.0.0",
+    "eslint-plugin-import": "2.7.0",
+    "fonteditor-core": "0.0.37",
+    "gulp-file-include": "1.2.0",
     "gulp-html-tpl": "0.4.1",
-    "gulp-iconfont": "8.0.1",
+    "gulp-iconfont": "9.0.0",
     "gulp-if": "2.0.2",
     "gulp-imagemin": "2.4.0",
     "gulp-newer": "1.3.0",
-    "gulp-postcss": "6.3.0",
-    "gulp-posthtml": "2.0.0",
-    "gulp-retina-resizer": "1.0.0",
+    "gulp-postcss": "7.0.0",
     "gulp-sass": "3.1.0",
-    "gulp-uglify": "2.0.1",
-    "gulp-util": "3.0.8",
-    "gulp.spritesmith": "6.3.0",
+    "gulp-uglify": "3.0.0",
     "imagemin-mozjpeg": "5.1.0",
     "imagemin-pngquant": "4.2.2",
-    "juicer": "0.6.14",
-    "postcss": "5.2.15",
-    "postcss-assets": "4.2.0",
+    "juicer": "0.6.15",
+    "mkdirp": "0.5.1",
+    "postcss": "6.0.10",
     "postcss-px-editor": "0.1.0",
-    "postcss-pxtorem": "3.3.1",
+    "postcss-pxtorem": "4.0.1",
+    "postcss-sprite-property": "1.0.2",
     "postcss-url-editor": "0.3.3",
     "posthtml-parser": "0.2.1",
-    "run-sequence": "1.2.2"
-  },
-  "devDependencies": {
-    "babel-core": "6.23.1",
-    "babel-eslint": "7.2.3",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-stage-0": "6.22.0"
+    "undertaker-registry": "1.0.0",
+    "yargs": "8.0.2"
   },
   "repository": {
     "type": "git",
