update reload callback and fix css sprite paths

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "babel -d build src",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.js || exit 0"
   },
   "engines": {
     "node": ">=8.0.0",
