--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "postcss": "6.0.10",
     "postcss-px-editor": "0.1.0",
     "postcss-pxtorem": "4.0.1",
-    "postcss-sprite-property": "1.0.3",
+    "postcss-sprite-property": "^1.0.4",
     "postcss-url-editor": "0.3.3",
     "posthtml-parser": "0.2.1",
     "undertaker-registry": "1.0.0",
