--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "del": "3.0.0",
     "eslint-plugin-import": "2.7.0",
     "fonteditor-core": "0.0.37",
-    "gm": "^1.23.0",
+    "gm": "1.23.0",
     "gulp-file-include": "1.2.0",
-    "gulp-html-tpl": "^0.5.1",
+    "gulp-html-tpl": "0.5.2",
     "gulp-iconfont": "9.0.0",
     "gulp-if": "2.0.2",
     "gulp-imagemin": "2.4.0",
@@ -44,10 +44,10 @@
     "imagemin-pngquant": "4.2.2",
     "juicer": "0.6.15",
     "mkdirp": "0.5.1",
-    "postcss": "6.0.10",
+    "postcss": "6.0.12",
     "postcss-px-editor": "0.1.0",
     "postcss-pxtorem": "4.0.1",
-    "postcss-sprite-property": "^1.1.0",
+    "postcss-sprite-property": "1.1.2",
     "postcss-url-editor": "0.3.3",
     "posthtml-parser": "0.2.1",
     "undertaker-registry": "1.0.0",
