--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
-  "presets": ["es2015", "stage-0"],
-  "plugins": ["transform-runtime"]
-}
+	"presets": [
+	  ["env", {
+		"targets": {
+		  "node": "8.7.0"
+		}
+	  }]
+	]
+  }
