--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-uedtask",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "",
   "main": "build/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "lint": "eslint src/**/*.js || exit 0"
   },
   "engines": {
-    "node": ">=8.0.0",
+    "node": ">=8.7.0",
     "npm": ">=5.0"
   },
   "keywords": [
@@ -16,21 +16,19 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "6.26.0",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "eslint": "4.5.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+	"eslint": "4.5.0",
+	"eslint-plugin-import": "2.7.0",
     "eslint-config-airbnb-base": "11.3.2"
   },
   "dependencies": {
     "autoprefixer": "7.1.3",
-    "babel-runtime": "6.26.0",
     "browser-sync": "2.18.13",
     "del": "3.0.0",
-    "eslint-plugin-import": "2.7.0",
     "fonteditor-core": "0.0.37",
     "gm": "1.23.0",
+    "gulp-babel": "^7.0.0",
     "gulp-file-include": "1.2.0",
     "gulp-html-tpl": "0.5.2",
     "gulp-iconfont": "9.0.0",
@@ -39,7 +37,6 @@
     "gulp-newer": "1.3.0",
     "gulp-postcss": "7.0.0",
     "gulp-sass": "3.1.0",
-    "gulp-uglify": "3.0.0",
     "imagemin-mozjpeg": "5.1.0",
     "imagemin-pngquant": "4.2.2",
     "juicer": "0.6.15",
@@ -51,6 +48,7 @@
     "postcss-url-editor": "0.3.3",
     "posthtml-parser": "0.2.1",
     "undertaker-registry": "1.0.0",
+    "webpack-stream": "^4.0.0",
     "yargs": "8.0.2"
   },
   "repository": {
