--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 	},
 	"dependencies": {
 		"autoprefixer": "7.1.3",
+		"babel-cli": "^6.26.0",
+		"babel-preset-env": "^1.6.1",
 		"browser-sync": "2.18.13",
 		"del": "3.0.0",
 		"fonteditor-core": "0.0.37",
