--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
-		"babel-cli": "^6.26.0",
-		"babel-preset-env": "^1.6.1",
 		"eslint": "4.5.0",
-		"eslint-plugin-import": "2.7.0",
-		"eslint-config-airbnb-base": "11.3.2"
+		"eslint-config-airbnb-base": "11.3.2",
+		"eslint-plugin-import": "2.7.0"
 	},
 	"dependencies": {
 		"autoprefixer": "7.1.3",
+		"babel-cli": "^6.26.0",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-minify": "^0.2.0",
 		"browser-sync": "2.18.13",
 		"del": "3.0.0",
 		"fonteditor-core": "0.0.37",
