--- a/package.json
+++ b/package.json
@@ -1,54 +1,58 @@
 {
-  "name": "gulp-uedtask",
-  "version": "2.1.10",
-  "description": "",
-  "main": "build/index.js",
-  "scripts": {
-    "build": "babel -d ./build ./src",
-    "lint": "eslint src/**/*.js"
-  },
-  "keywords": [
-    "gulp"
-  ],
-  "license": "MIT",
-  "dependencies": {
-    "autoprefixer": "7.1.4",
-    "browser-sync": "2.18.8",
-    "del": "2.2.2",
-    "fonteditor-core": "0.0.36",
-    "glob": "7.1.1",
-    "gulp-file-include": "1.1.0",
-    "gulp-html-tpl": "0.5.2",
-    "gulp-iconfont": "8.0.1",
-    "gulp-if": "2.0.2",
-    "gulp-imagemin": "2.4.0",
-    "gulp-newer": "1.3.0",
-    "gulp-postcss": "6.3.0",
-    "gulp-posthtml": "2.0.0",
-    "gulp-retina-resizer": "1.0.0",
-    "gulp-sass": "3.1.0",
-    "gulp-uglify": "2.0.1",
-    "gulp-util": "3.0.8",
-    "gulp.spritesmith": "6.3.0",
-    "imagemin-mozjpeg": "5.1.0",
-    "imagemin-pngquant": "4.2.2",
-    "juicer": "0.6.14",
-    "postcss": "5.2.15",
-    "postcss-assets": "4.2.0",
-    "postcss-px-editor": "0.1.0",
-    "postcss-pxtorem": "3.3.1",
-    "postcss-url-editor": "0.3.3",
-    "posthtml-parser": "0.2.1",
-    "run-sequence": "1.2.2"
-  },
-  "devDependencies": {
-    "babel-core": "6.23.1",
-    "babel-eslint": "7.2.3",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-stage-0": "6.22.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/meltifa/gulp-uedtask.git"
-  }
+	"name": "gulp-uedtask",
+	"version": "2.1.10",
+	"description": "",
+	"main": "build/index.js",
+	"scripts": {
+		"build": "babel -d ./build ./src",
+		"lint": "eslint src/**/*.js"
+	},
+	"keywords": [
+		"gulp"
+	],
+	"license": "MIT",
+	"dependencies": {
+		"autoprefixer": "7.1.4",
+		"babel-cli": "^6.26.0",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-minify": "^0.2.0",
+		"browser-sync": "2.18.8",
+		"del": "2.2.2",
+		"fonteditor-core": "0.0.36",
+		"glob": "7.1.1",
+		"gm": "1.23.0",
+		"gulp-babel": "^7.0.0",
+		"gulp-file-include": "1.1.0",
+		"gulp-html-tpl": "0.5.2",
+		"gulp-iconfont": "8.0.1",
+		"gulp-if": "2.0.2",
+		"gulp-imagemin": "2.4.0",
+		"gulp-newer": "1.3.0",
+		"gulp-postcss": "6.3.0",
+		"gulp-posthtml": "2.0.0",
+		"gulp-retina-resizer": "1.0.0",
+		"gulp-sass": "3.1.0",
+		"gulp-uglify": "2.0.1",
+		"gulp-util": "3.0.8",
+		"gulp.spritesmith": "6.3.0",
+		"imagemin-mozjpeg": "5.1.0",
+		"imagemin-pngquant": "4.2.2",
+		"juicer": "0.6.15",
+		"postcss": "5.2.15",
+		"postcss-assets": "4.2.0",
+		"postcss-px-editor": "0.1.0",
+		"postcss-pxtorem": "3.3.1",
+		"postcss-url-editor": "0.3.3",
+		"posthtml-parser": "0.2.1",
+		"run-sequence": "1.2.2"
+	},
+	"devDependencies": {
+		"eslint": "4.5.0",
+		"eslint-config-airbnb-base": "11.3.2",
+		"eslint-plugin-import": "2.7.0"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/meltifa/gulp-uedtask.git"
+	}
 }
